# image-recognition

./: .gitignore  Dockerfile  README.md
backend/: Dockerfile  Pipfile  app.py  pyproject.toml  recognition.py  requirements.txt
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Search.tsx  providers.tsx
