[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "3.0.0"
flask = "2.3.2"
flask-cors = "4.0.0"
imageai = "3.0.3"
matplotlib = "3.7.2"
mock = "4.0.3"
mpmath = "1.3.0"
numpy = "1.25.2"
opencv-python = "4.8.0.76"
pillow = "10.0.0"
pymongo = "4.4.1"
pytest = "7.1.3"
torch = "2.0.1"
torchvision = "0.15.2"
tqdm = "4.64.1"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
